hphp/hack/test/typecheck/enum_eq_bad.php.exp
File "enum_eq_bad.php", line 17, characters 7-15:
This equality test has incompatible types (Typing[4157])
File "enum_eq_bad.php", line 4, characters 10-12:
This is a value of enum E
File "enum_eq_bad.php", line 9, characters 10-12:
This is a value of enum F
